tests/fixtures/errors/unknown_expr_type.chisa
let x = if true {
    let y = 1
} else {
    2
}
